--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "depd": "^2.0.0",
     "destroy": "^1.2.0",
     "ee-first": "^1.1.1",
+    "ejs": "^3.1.8",
     "encodeurl": "^1.0.2",
     "escape-html": "^1.0.3",
     "etag": "^1.8.1",
@@ -47,6 +48,7 @@
     "mime": "^1.6.0",
     "mime-db": "^1.52.0",
     "mime-types": "^2.1.35",
+    "mongoose": "^6.8.0",
     "ms": "^2.0.0",
     "negotiator": "^0.6.3",
     "node-domexception": "^1.0.0",
