--- a/package.json
+++ b/package.json
@@ -58,6 +58,9 @@
     "object-inspect": "^1.12.2",
     "on-finished": "^2.4.1",
     "parseurl": "^1.3.3",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^7.1.2",
     "path-to-regexp": "^0.1.7",
     "proxy-addr": "^2.0.7",
     "proxy-from-env": "^1.1.0",
