--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bytes": "^3.1.2",
     "call-bind": "^1.0.2",
     "combined-stream": "^1.0.8",
+    "connect-mongo": "^4.6.0",
     "content-disposition": "^0.5.4",
     "content-type": "^1.0.4",
     "cookie": "^0.5.0",
