--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
+  "type": "module",
   "dependencies": {
     "accepts": "^1.3.8",
     "array-flatten": "^1.1.1",
@@ -96,6 +97,5 @@
   "bugs": {
     "url": "https://github.com/Matt-Cowles/CryptoTracker/issues"
   },
-  "homepage": "https://github.com/Matt-Cowles/CryptoTracker#readme",
-  "type": "module"
+  "homepage": "https://github.com/Matt-Cowles/CryptoTracker#readme"
 }
