--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bytes": "^3.1.2",
     "call-bind": "^1.0.2",
     "combined-stream": "^1.0.8",
+    "connect-flash": "^0.1.1",
     "connect-mongo": "^4.6.0",
     "content-disposition": "^0.5.4",
     "content-type": "^1.0.4",
