--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "delayed-stream": "^1.0.0",
     "depd": "^2.0.0",
     "destroy": "^1.2.0",
+    "dotenv": "^16.0.3",
     "ee-first": "^1.1.1",
     "ejs": "^3.1.8",
     "ejs-mate": "^4.0.0",
